<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>innoxia</groupId>
	<artifactId>lilithsthrone</artifactId>
	<packaging>jar</packaging>
	<version>0.4.8.5</version>
	<name>Lilith's Throne</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<javafx.version>18.0.2</javafx.version>
		<nashorn.version>15.4</nashorn.version>
		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
		<maven-shade-plugin.version>3.3.0</maven-shade-plugin.version>
		<maven-compile-plugin.version>3.10.1</maven-compile-plugin.version>
	</properties>

	<profiles>
		<profile>
			<id>profile-windows</id>
			<activation>
				<os>
					<family>Windows</family>
				</os>
			</activation>
			<properties>
				<target.platform>win</target.platform>
				<exclude.platform>linux</exclude.platform>
			</properties>
		</profile>
		<profile>
			<id>profile-linux</id>
			<activation>
				<os>
					<family>Linux</family>
				</os>
			</activation>
			<properties>
				<target.platform>linux</target.platform>
				<exclude.platform>win</exclude.platform>
			</properties>
		</profile>
	</profiles>

	<dependencies>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>${javafx.version}</version>
			<classifier>${target.platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
			<classifier>${target.platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${javafx.version}</version>
			<classifier>${target.platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
			<classifier>${target.platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
			<classifier>${target.platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>${javafx.version}</version>
			<classifier>${target.platform}</classifier>
		</dependency>

		<dependency>
			<groupId>org.openjdk.nashorn</groupId>
			<artifactId>nashorn-core</artifactId>
			<version>${nashorn.version}</version>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src/com/lilithsthrone/res</directory>
				<targetPath>com/lilithsthrone/res</targetPath>
			</resource>
			<resource>
				<directory>res</directory>
				<targetPath>${project.build.directory}/${project.name} (${target.platform})/res</targetPath>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compile-plugin.version}</version>
				<configuration>
					<release>${maven.compiler.release}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>${javafx.maven.plugin.version}</version>
				<configuration>
					<mainClass>com.lilithsthrone.main.Main</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${maven-shade-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>project-classifier</shadedClassifierName>
							<outputFile>${project.build.directory}/${project.name} (${target.platform})/${project.name}-${project.version}.jar</outputFile>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>com.lilithsthrone.Launcher</mainClass>
								</transformer>
							</transformers>
							<artifactSet>
								<excludes>
								  <exclude>org.openjfx:*:${exclude.platform}</exclude>
								</excludes>
							  </artifactSet>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>